# patchlogue

./: Cargo.toml  README.md
.github/workflows/: deploy.yml  rust.yml
ci-checks/: ci.sh
resources/: current_program_dump_response_spec.txt  current_program_dump_spec.tags
resources/files/: Prog_000.prog_bin
resources/midi/: basic.syx
src/: lib.rs  sysex.rs
src/ontology/: mod.rs  timbre_parameters.rs
www/: index.html  index.js  midi.js  package-lock.json  package.json  style.css  ui.js  utils.js  webpack.config.js
