[package]
name = "patchlogue"
version = "0.1.0"
authors = ["Anthony Reinette"]
edition = "2018"
description = "A tool to visualize patches from KORG logue synthesizers"
repository = "https://github.com/anthonyray/patchlogue"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
binrw = "0.11.1"
serde_json = "1.0.0"
serde = { version = "1.0", features = ["derive"] }

wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
